added product entity