@@ -11,6 +11,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 
 @Service
@@ -32,6 +33,6 @@ public class ProductServiceImpl implements ProductService {
     @Override
     public List<ProductResponse> getAllProducts() {
         List<Product> all = productRepository.findAll();
-        return all.stream().map(product -> productMapper.mapToProductResponse(product)).toList();
+        return all.stream().map(product -> productMapper.mapToProductResponse(product)).collect(Collectors.toList());
     }
 }
